<resources>
    <string name="app_name">Việc làm Part Time</string>
    <string name="title">Việc Làm Part Time</string>
    <string name="fb_button">ĐĂNG NHẬP BẰNG FACEBOOK</string>
    <string name="google_button">ĐĂNG NHẬP BẰNG GOOGLE</string>
    <string name="create_button">TẠO TÀI KHOẢN MỚI</string>
    <string name="toLogin">Đăng nhập tại đây</string>
    <string name="toRegister">Đăng ký tại đây</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_confirm_password">Xác nhận lại mật khẩu</string>
    <string name="next">Tiếp theo</string>
    <string name="personal_info_title">Thông Tin Cá Nhân</string>
    <string name="hint_full_name">Họ tên</string>
    <string name="hint_dob">Ngày sinh</string>
    <string name="hint_address">Địa chỉ</string>
    <string name="hint_education">Học vấn</string>
    <string name="hint_phone_number">Số điện thoại</string>
    <string name="foreign_language_title">Ngoại Ngữ</string>
    <string name="skill_title">Kỹ Năng</string>
    <string name="register">ĐĂNG KÝ</string>
    <string name="text1">Đã có tài khoản?</string>
    <string name="text2">Chưa có tài khoản?</string>
    <string name="account_info_title">Thông Tin Tài Khoản</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="text3">Huỳnh Quang Thảo</string>
    <string name="text_mail">kaihuynhdn@gmail.com</string>
    <string-array name="foreign_language">
        <item>Không</item>
        <item>Tiếng Anh</item>
        <item>Tiếng Bồ Đào Nha</item>
        <item>Tiếng Hàn</item>
        <item>Tiếng Nga</item>
        <item>Tiếng Nhật</item>
        <item>Tiếng Pháp</item>
        <item>Tiếng Tây Ban Nha</item>
        <item>Tiếng Trung</item>
        <item>Khác</item>
    </string-array>
    <string-array name="skill_array">
        <item>Không</item>
        <item>Kỹ năng giao tiếp</item>
        <item>Tư duy sáng tạo</item>
        <item>Chịu được áp lực công việc</item>
        <item>Kỹ năng nghiên cứu</item>
        <item>Giải quyết vấn đề</item>
        <item>Kỹ năng sử dụng máy tính</item>
        <item>Tinh thần học hỏi</item>
        <item>Kỹ năng quản lý thời gian</item>
        <item>Làm việc theo nhóm</item>
        <item>Tư duy phản biện</item>
        <item>Kỹ năng tổ chức</item>
        <item>Kỹ năng thuyết trình</item>
        <item>Kỹ năng quản lý tài chính</item>
        <item>Khác</item>
    </string-array>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home">Trang Chủ</string>
    <string name="liked_job">CV Yêu Thích</string>
    <string name="applied_job">CV Ứng Tuyển</string>
    <string name="notification">Thông Báo</string>
    <string name="hint_gender">Giới tính</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arrangement">Sắp xếp</string>
    <string-array name="location">
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cần Thơ</item>
        <item>Cao Bằng</item>
        <item>Đà Nẵng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Nội</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hội An</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Phú Yên</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>TP Hồ Chí Minh</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
    </string-array>
    <string name="previous">Quay lại</string>
    <string name="done">Xong</string>
    <string name="text5">Đăng ký tài khoản thành công !</string>
    <string name="text6">Bạn muốn tiếp tục đăng ký thông tin cá nhân?</string>
    <string name="salary">Lương bổng:</string>
    <string name="profile">Hồ sơ cá nhân</string>
    <string name="recruitment">Đăng tuyển</string>
    <string name="management">Quản lý tin đăng</string>
    <string name="logout">Đăng xuất</string>
    <string name="contact">Liên hệ</string>
    <string name="option">⋮</string>
    <string name="date_posted">Ngày Đăng:</string>
    <string name="benefit">PHÚC LỢI:</string>
    <string name="job_title">Tên công việc</string>
    <string name="job_info">THÔNG TIN CÔNG VIỆC</string>
    <string name="text4">Nhập thông tin…</string>
    <string name="job_description">CHI TIẾT CÔNG VIỆC</string>
    <string name="personal_requirement">YÊU CẦU</string>
    <string name="other">Khác:</string>
    <string name="save">Lưu</string>
    <string name="apply">Ứng tuyển</string>
    <string name="share_1">Chia sẻ…</string>
    <string name="delete">Xóa</string>
    <string name="personal_description">Mô tả cá nhân</string>
    <string name="job_details">Mô tả công việc</string>
    <string name="general">Thông tin chung</string>
    <string name="update">Chỉnh sửa</string>
    <string name="applied_date">Thời gian ứng tuyển:</string>
    <string name="age">Tuổi</string>
    <string name="get_time_text_1">Hôm qua lúc </string>
    <string name="get_time_text_2"> giờ trước</string>
    <string name="get_time_text_3">1 phút trước</string>
    <string name="get_time_text_4"> phút trước</string>
    <string name="delete_job_title">Thông báo</string>
    <string name="delete_job_message">Bạn có muốn xóa tin tuyển dụng này không ?</string>
    <string name="positive_btn_dialog">Có</string>
    <string name="negative_btn_dialog">Hủy</string>
    <string name="remove">Hủy Lưu</string>
    <string name="add_new_language_title">Thêm ngoại ngữ:</string>
    <string name="add_new_skill_title">Thêm kĩ năng:</string>
    <string name="add_new_language_positive">Thêm</string>
    <string name="quantity_job">việc làm</string>
    <string name="back">Quay về</string>
    <string name="connection_error"> Lỗi kết nối!</string>
    <string name="error">Lỗi</string>
    <string name="personal_description_loading_message">Đang xử lý thông tin…</string>
    <string name="login_loading_message">Đang xác nhận thông tin…</string>
    <string name="login_method_loading_message">Đang xử lý dữ liệu…</string>
    <string name="next_button_dialog">Tiếp tục</string>
    <string name="success_register_info_dialog">Đăng ký thông tin thành công</string>
    <string name="pick_education_dialog_title">Chọn:</string>
    <string name="update_profile">Bạn cần hoàn thiện hồ sơ cá nhân để ứng tuyển</string>
    <string name="exit">Thoát</string>
    <string name="status_title">Trạng thái</string>
    <string name="notify">Thông báo</string>
    <string name="exit_recruiting_notify">Thoát khỏi đăng tuyển ?</string>
    <string name="positive_save_dialog">Lưu</string>
    <string name="empty_edittext_error">Cần nhập đủ thông tin.</string>
    <string name="failed_status">Bị từ chối !</string>
    <string name="passed_status">Được tuyển chọn !</string>
    <string name="to_home_page">Về trang chủ</string>
    <string name="login_google">ĐĂNG NHẬP BẰNG GOOGLE</string>
    <string name="lack_of_info_notification">Cần nhập đủ thông tin.</string>
    <string name="lack_of_title_notification">Cần thêm tiều đề cho công việc.</string>
    <string name="update_job_success">Cập nhật công việc thành công !</string>
    <string name="update_success">Cập nhật công việc</string>
    <string name="mail_error">Thông tin email chưa chính xác.</string>
    <string name="repassword_error">Xác nhận mật khẩu chưa chính xác.</string>
    <string name="password_register_error">Mật khẩu phải ít nhất 6 ký tự.</string>
    <string name="email_exist">Địa chỉ email đã tồn tại.</string>
    <string name="favourite_job">Công việc yêu thích</string>
    <string name="apply_job">Công việc ứng tuyển</string>
    <string name="applied">Đã ứng tuyển !</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="facebook_app_id">108585286650544</string>
    <string name="fb_login_protocol_scheme">fb108585286650544</string>
    <string name="empty_apply_job">Bạn chưa <b>Ứng Tuyển</b> công việc nào.\nHãy tìm một công việc mới nào!</string>
    <string name="empty_like_jobs">Bạn chưa thêm công việc nào vào danh sách!</string>
    <string name="viewing">Đang duyệt</string>
    <string name="empty_recruitment">Bạn chưa <b>Đăng tuyển</b> công việc nào.\nHãy đăng tin một công việc mới nào!</string>
    <string name="empty_candidate">Chưa có ứng viên của công việc này !</string>
    <string name="profile_activity">Thông tin cá nhân</string>
    <string name="recruiting_activity">Đăng tuyển công việc</string>
    <string name="title_main_1">WELCOME TO</string>
    <string name="title_main_2">Việc Làm Part Time</string>
    <string name="waiting_check">Đang chờ duyệt</string>
    <string name="update_job">CẬP NHẬT</string>
    <string name="status">Trạng thái</string>
    <string name="empty_notification">Bạn chưa có thông báo !</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google +</string>
    <string name="search_hint">Nhập từ khóa…</string>
    <string name="search">Tìm kiếm</string>
    <string name="avarar_img_description">avatar of user</string>
    <string name="refuse_candidate">Từ chối</string>
    <string name="choose_candidate">Đồng ý</string>
    <string name="img_description">img_description</string>
    <string name="employed_text">Được tuyển dụng</string>
    <string name="unemployed_text">Bị từ chối</string>
    <string name="personal_skills">Kỹ năng cá nhân</string>
    <string name="add_personal_description">Thêm mô tả cá nhân</string>
    <string name="x">x</string>
    <string name="dot_symbol">●</string>
    <string name="empty_search">Không có kết quả!</string>
    <string name="location_item">Địa điểm:</string>
    <string name="register_info_dialog_title">Thông báo</string>
    <string name="register_info_dialog_message">Bạn cần hoàn thiện hồ sơ cá nhân để đăng tuyển</string>
    <string name="job_tab_host">CÔNG VIỆC</string>
    <string name="recruiter_tab_host">NGƯỜI TUYỂN</string>
</resources>