<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="5"
    android:padding="@dimen/activity_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context="com.example.kaihuynh.part_timejob.MainActivity">

    <RelativeLayout
        android:layout_weight="4"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txt_title1"
            android:textSize="30sp"
            android:text="@string/title_main_1"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/iciel_cadena"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_title2"
            android:layout_below="@+id/txt_title1"
            android:layout_marginTop="@dimen/activity_padding"
            android:textSize="32sp"
            android:fontFamily="@font/iciel_cadena"
            android:textColor="@color/white"
            android:text="@string/title_main_2"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/distance_view_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_below="@id/txt_title2"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyle"
            android:progress="50"
            android:progressDrawable="@drawable/progress_bar"
            android:layout_width="@dimen/progressBar_width"
            android:layout_height="@dimen/progressBar_height" />

        <ImageView
            android:id="@+id/img_refresh"
            android:layout_below="@id/txt_title2"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:src="@drawable/refresh"
            android:layout_width="@dimen/progressBar_width"
            android:layout_height="@dimen/progressBar_height"
            android:contentDescription="@string/img_description" />

    </RelativeLayout>

</LinearLayout>
