<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    android:background="@drawable/splash_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="8"
    tools:context="com.example.kaihuynh.part_timejob.LoginMethodActivity">

    <TextView
        android:id="@+id/txt_title"
        android:text="@string/title"
        android:gravity="center"
        android:fontFamily="@font/iciel_cadena"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_weight="7"
        android:orientation="vertical"
        android:background="@drawable/grey_background"
        android:gravity="center"
        android:elevation="@dimen/distance_view_20"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_fb_login"
            facebook:com_facebook_logout_text="@string/fb_button"
            facebook:com_facebook_login_text="@string/fb_button"
            android:layout_marginLeft="@dimen/width_height_fb_button"
            android:layout_marginRight="@dimen/width_height_fb_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FacebookLoginButton"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google_login"
            android:layout_marginTop="@dimen/distance_view_20"
            android:layout_marginLeft="@dimen/distance_view_40"
            android:layout_marginRight="@dimen/distance_view_40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/distance_view_40"
            android:layout_marginRight="@dimen/distance_view_40"
            android:layout_marginTop="@dimen/distance_view_20"
            android:gravity="center"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:background="@color/green"
                android:layout_width="0dp"
                android:layout_height="@dimen/distance_view_1" />

            <TextView
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/distance_view_10"
                android:layout_marginRight="@dimen/distance_view_10"
                android:background="@color/yellow"
                android:layout_width="0dp"
                android:layout_height="@dimen/distance_view_1" />

            <TextView
                android:layout_weight="1"
                android:background="@color/red"
                android:layout_width="0dp"
                android:layout_height="1dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_create"
            android:layout_marginTop="@dimen/distance_view_20"
            android:layout_marginLeft="@dimen/distance_view_40"
            android:paddingLeft="@dimen/distance_view_10"
            android:paddingRight="@dimen/distance_view_10"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/distance_view_40"
            android:text="@string/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LocationButton"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/distance_view_30"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/text1"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_toLogin_method"
                android:layout_marginLeft="5dp"
                android:textColor="@color/lightBlue_700"
                android:textSize="16sp"
                android:text="@string/toLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
