<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.kaihuynh.part_timejob.PersonalInfoFragment">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="8"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/personal_info_title"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textColor="@color/end_color"
            android:fontFamily="@font/iciel_cadena"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="6"
            android:layout_marginTop="@dimen/distance_view_20"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_dob_layout"
                app:hintTextAppearance="@style/TextInputLayoutHintText"
                android:textColorHint="@color/grey_54"
                android:layout_marginTop="@dimen/distance_view_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_dob"
                    android:drawablePadding="@dimen/distance_view_10"
                    android:drawableLeft="@drawable/dob"
                    android:editable="false"
                    android:textSize="18sp"
                    android:textColor="@color/grey_600"
                    android:fontFamily="@font/linotte_semi_bold"
                    android:hint="@string/hint_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_gender_layout"
                app:hintTextAppearance="@style/TextInputLayoutHintText"
                android:textColorHint="@color/grey_54"
                android:layout_marginTop="@dimen/distance_view_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_gender"
                    android:drawablePadding="@dimen/distance_view_10"
                    android:drawableLeft="@drawable/gender"
                    android:textSize="18sp"
                    android:editable="false"
                    android:textColor="@color/grey_600"
                    android:fontFamily="@font/linotte_semi_bold"
                    android:hint="@string/hint_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_address_layout"
                app:hintTextAppearance="@style/TextInputLayoutHintText"
                android:textColorHint="@color/grey_54"
                android:layout_marginTop="@dimen/distance_view_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_address"
                    android:drawablePadding="@dimen/distance_view_10"
                    android:textSize="18sp"
                    android:editable="false"
                    android:drawableLeft="@drawable/address"
                    android:textColor="@color/grey_600"
                    android:fontFamily="@font/linotte_semi_bold"
                    android:hint="@string/hint_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_phone_number_layout"
                app:hintTextAppearance="@style/TextInputLayoutHintText"
                android:textColorHint="@color/grey_54"
                android:layout_marginTop="@dimen/distance_view_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_phone_number"
                    android:drawablePadding="@dimen/distance_view_10"
                    android:inputType="number"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/phone_number"
                    android:textColor="@color/grey_600"
                    android:fontFamily="@font/linotte_semi_bold"
                    android:hint="@string/hint_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_education_layout"
                app:hintTextAppearance="@style/TextInputLayoutHintText"
                android:textColorHint="@color/grey_54"
                android:layout_marginTop="@dimen/distance_view_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_education"
                    android:drawablePadding="@dimen/distance_view_10"
                    android:drawableLeft="@drawable/education"
                    android:textSize="18sp"
                    android:textColor="@color/grey_600"
                    android:fontFamily="@font/linotte_semi_bold"
                    android:hint="@string/hint_education"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:id="@+id/btn_next_personal"
                android:background="@drawable/next_button"
                android:fontFamily="@font/iciel_cadena"
                android:layout_gravity="right"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
